2006-07-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed behavior to capture stderr on start
	  and output it on error.
	* src/etc/munge.init.in: Changed behavior on RedHat to not return an
	  error when stopping a service that is already stopped.

2006-07-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c(main): Moved daemonize_fini() to just before
	  job_accept() in order to return more fatal error conditions to shell.
	* src/munged/munged.c(daemonize_init): Changed behavior for original
	  parent process to read error priority & message via "daemonize" pipe
	  and write error message to stderr before exiting.
	* src/munged/munged.c(open_logfile): Added.
	* src/munged/conf.c, src/munged/conf.h: Added logfile_name to conf.
	* src/libcommon/log.c(_log_aux): Added msgbuf & msgbuflen to prototype.
	  Changed behavior to return error message string via msgbuf.
	* src/libcommon/log.c(_log_die): Added priority & msg to prototype.
	  Changed behavior to return priority and msg across "daemonize" pipe.
	* src/libcommon/log.h(log_set_err_pipe): Updated documentation.

2006-07-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c: Changed daemonize_init() and daemonize_fini()
	  so grandchild process can return error status to original parent
	  process via "daemonize" pipe.
	* src/libcommon/log.c(_log_die): Added check to return error status
	  across "daemonize" pipe.
	* src/libcommon/log.c, src/libcommon/log.h: Added log_set_err_pipe().

	* QUICKSTART: Updated.

	* src/etc/munge.sysconfig: Removed PIDFILE since the MUNGED_PIDFILE
	  define in src/libcommon/munge_defs.h needs to be modified as well.

2006-07-24  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Tweaked %post test to create munge.key.

	* src/libcommon/auth_policy.h: Tweaked documentation.

	* munge.spec: Added munge requires tag to munge-devel & munge-libs.

	* munge.spec: Added %post to create munge.key if it does not exist.
